--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
   --color-section: #fff1ef;
 
-  --color-text: #333333;
+  --color-text: ;
   --color-textSecondary: #ffd6a5;
   --color-textLight: #333333;
 
