--- a/src/Components/Banner/style.css
+++ b/src/Components/Banner/style.css
@@ -1,11 +1,27 @@
-.mySwiper.swiper-button-next {
-    color: #dc7977;
-}
-
 .mySwiper .swiper-pagination-bullet {
     background: #dc7977;
 }
 
 .mySwiper .swiper-pagination-bullet-active {
     background: #dc7977;
+}
+
+.mySwiper .swiper-button-next,
+.mySwiper .swiper-button-prev {
+
+    color: #dc7977;
+
+
+}
+
+@media (max-width:768px) {
+
+    .mySwiper .swiper-button-next,
+    .mySwiper .swiper-button-prev {
+
+        display: none;
+
+
+    }
+
 }
