navbar for mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
 }
 
 .navLink {
-  @apply ml-5 font-semibold text-lg text-primary
+  @apply ml-5 font-semibold lg:text-lg text-base text-primary
 }
 
 .navLink.active {
